syntax = "proto3";

package restaurants.v1;

import "restaurants/v1/restaurant.proto";

option go_package = "api/src/generated/restaurants/v1";

service RestaurantsService {
  rpc CreateRestaurant(CreateRestaurantRequest) returns (CreateRestaurantResponse);
  rpc GetRestaurant(GetRestaurantRequest) returns (GetRestaurantResponse);
  rpc UpdateRestaurant(UpdateRestaurantRequest) returns (UpdateRestaurantResponse);
  rpc DeleteRestaurant(DeleteRestaurantRequest) returns (DeleteRestaurantResponse);
  rpc ListRestaurants(ListRestaurantsRequest) returns (ListRestaurantsResponse);
}

message CreateRestaurantRequest {
  string google_places_id = 1;
  string name = 2;
  string address = 3;
}

message CreateRestaurantResponse {
  RestaurantProto restaurant = 1;
}

message GetRestaurantRequest {
  string id = 1; // UUIDv7 as string
}

message GetRestaurantResponse {
  RestaurantProto restaurant = 1;
}

message UpdateRestaurantRequest {
  string id = 1; // UUIDv7 as string
  string google_places_id = 2;
  string name = 3;
  string address = 4;
}

message UpdateRestaurantResponse {
  RestaurantProto restaurant = 1;
}

message DeleteRestaurantRequest {
  string id = 1;
}

message DeleteRestaurantResponse {
  bool success = 1;
}

message ListRestaurantsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListRestaurantsResponse {
  repeated RestaurantProto restaurants = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}
