syntax = "proto3";

package restaurants.v1;

option go_package = "resto-rate/generated/go/restaurants/v1";

message RestaurantProto {
  string id = 1;           // ULID as string
  string google_id = 2;    // GoogleID
  string email = 3;        // Email
  string name = 4;         // Name
  int64 created_at = 6;  // Unix timestamp
  int64 updated_at = 7;  // Unix timestamp
}
